// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/FilterChip Default 1`] = `
<button
  aria-label="I am an aria label"
  className="px-2 py-1 border rounded-md focus:rounded focus:ring-2 focus:ring-gray-800 focus:outline-none focus:ring-offset-2 focus:ring-offset-white border-gray-40 transition-opacity duration-75 ease-in-out opacity-100 disabled:opacity-100 disabled:cursor-not-allowed"
  onClick={[Function]}
  type="button"
>
  <p>
    I could be a label
  </p>
</button>
`;

exports[`Storyshots UI Elements/FilterChip Deselected 1`] = `
<button
  aria-label="I am an aria label"
  className="px-2 py-1 border rounded-md focus:rounded focus:ring-2 focus:ring-gray-800 focus:outline-none focus:ring-offset-2 focus:ring-offset-white border-gray-200 transition-opacity duration-75 ease-in-out opacity-50 disabled:opacity-100 disabled:cursor-not-allowed"
  onClick={[Function]}
  type="button"
>
  <p>
    I could be a label
  </p>
</button>
`;
